--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/(.*\\.txt)",
+      "dest": "/public/$1"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "api/$1.py"
     }
