Add build script to generate Vercel output

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "vercel": "^44.2.6"
   },
   "scripts": {
-    "vercel-build": "mkdir -p .vercel/output/static && cp api/*.txt .vercel/output/static/"
+    "vercel-build": "node build-output.js"
   }
 }
