--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,1 +1,34 @@
-<paste YAML here>
+name: Python tests
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+
+jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # runtime deps
+          pip install -r requirements.txt
+          # test-time deps
+          pip install pytest requests python-dotenv
+
+      - name: Run pytest (skip slow tests)
+        env:
+          BASE_URL: https://book-gpt-api.vercel.app
+        run: |
+          python -m pytest -v
