--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "vercel": "^32.0.1"
+  },
+  "scripts": {
+    "vercel-build": "node build-output.js"
   }
 }
