--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,34 +1,42 @@
-name: Python tests
+name: python-tests
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
+    branches: [ main ]
 
 jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Vercel CLI
+        run: npm i -g vercel@latest
+
+      - name: Deploy (prebuilt)
+        env:
+          VERCEL_TOKEN: ${{ secrets.ADMIN_SECRET }}  # existing secret with your Vercel token
+        run: vercel deploy --prebuilt --prod --token $VERCEL_TOKEN
+
   tests:
     runs-on: ubuntu-latest
+    needs: deploy  # wait for successful production deploy
+    env:
+      BASE_URL: https://book-gpt-api.vercel.app
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
-          cache: "pip"
+          python-version: 3.12
+          cache: pip
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # runtime deps
           pip install -r requirements.txt
-          # test-time deps
           pip install pytest requests python-dotenv
 
-      - name: Run pytest (skip slow tests)
-        env:
-          BASE_URL: https://book-gpt-api.vercel.app
-        run: |
-          python -m pytest -v
+      - name: Run pytest suite
+        run: pytest -v
