--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Deploy (prebuilt)
         env:
           VERCEL_TOKEN: ${{ secrets.ADMIN_SECRET }}  # existing secret with your Vercel token
-        run: vercel deploy --prebuilt --prod --token $VERCEL_TOKEN
+        run: vercel deploy --prebuilt --prod --yes
 
   tests:
     runs-on: ubuntu-latest
