ci: use ADMIN_SECRET as VERCEL_TOKEN for Vercel deploy

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Deploy (prebuilt)
         env:
-          VERCEL_TOKEN: ${{ secrets.ADMIN_SECRET }}  # existing secret with your Vercel token
+          ADMIN_SECRET: ${{ secrets.ADMIN_SECRET }}  # existing secret with your Vercel token
         run: vercel deploy --prebuilt --prod --yes
 
   tests:
