ci: use ADMIN_SECRET as VERCEL_TOKEN for Vercel deploy

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Deploy (prebuilt)
         env:
           ADMIN_SECRET: ${{ secrets.ADMIN_SECRET }}  # existing secret with your Vercel token
-        run: vercel deploy --prebuilt --prod --yes
+        run: vercel deploy --prebuilt --prod --token $ADMIN_SECRET
 
   tests:
     runs-on: ubuntu-latest
