--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -5,8 +5,20 @@ on:
     branches: [ main ]
 
 jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Vercel CLI
+        run: npm i -g vercel@latest
+
+      - name: Deploy (prebuilt -> prod)
+        run: vercel deploy --prebuilt --prod --yes
+
   tests:
     runs-on: ubuntu-latest
+    needs: deploy          # wait for deploy job
     env:
       BASE_URL: https://book-gpt-api.vercel.app
     steps:
@@ -17,11 +29,11 @@ jobs:
           python-version: 3.12
           cache: pip
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest requests python-dotenv
 
-      - name: Run pytest suite
+      - name: Run pytest
         run: pytest -v
